--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale">
     <title>About A K Al Tasin</title>
     <style>
         body {
@@ -70,7 +70,7 @@
         <img src="your-photo.jpg" alt="A K Al Tasin's Photo">
             <p><strong>My Name:</strong> A K Al Tasin</p>
             <p><strong>Father's Name:</strong> MD. Ain Uddin Khaled</p>
-            <p><strong>Mother's Name:</strong> MST. Halima Khatun Sheuly</p>
+            <p><strong>Mother's Name:</strong> MST. Halima Khatun Shewly</p>
             <p><strong>I am single	&#128517;</p>
             <p><strong>I am a student of CST department at Kishoregonj Polytechnic Institute</p>
         </section>
