--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="bangla">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, scale=device-scale">
