--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="bangla">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, scale=device-scale">
     <title>About A K Al Tasin</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: Algerian, sans-serif;
             background-color: #bf5353;
             color: #fdfbfb;
             margin: 0;
