--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>About A K Al Tasin</title>
     <style>
         body {
-            font-family: Algerian, sans-serif;
+            font-family: Helvetica, sans-serif;
             background-color: #bf5353;
             color: #fdfbfb;
             margin: 0;
